# RobotImpedanceModulation

./: CMakeLists.txt  README.md  mapping_rules.yaml  package.xml
config/: impedance_modulation_settings.yaml  impedance_modulation_settings_centauro.yaml  impedance_modulation_settings_centauro_first.yaml  impedance_modulation_settings_centauro_initial.yaml  impedance_modulation_settings_centauro_simulation.yaml
include/ImpedanceModulation/: ImpedanceModulationManager.h
include/ImpedanceModulation/utils/: KDLhelper.h  algebra.h  logger.h  utilities.h
launch/: impedance_modulation.launch.py  impedance_modulation.py  impedance_modulation_centauro.launch.py  impedance_modulation_centauro_first.launch.py  impedance_modulation_centauro_initial.launch.py
msg/: ImpedanceMsg.msg  TaskMsg.msg
src/: ImpedanceModulation.cpp  ImpedanceModulationManager.cpp
urdf/: inail2arm.urdf
utils/: KDLhelper.cpp  algebra.cpp  logger.cpp  utilities.cpp
